--- a/java-app/pom.xml
+++ b/java-app/pom.xml
@@ -10,21 +10,25 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring-boot.version>3.1.0</spring-boot.version>
+        <spring-boot.version>3.1.0</spring-boot.version> <!-- 🔹 Added Spring Boot Version -->
     </properties>
 
     <dependencies>
+        <!-- 🔹 Added Missing Version Number -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- 🔹 Added Missing Version Number for Maven Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
             </plugin>
         </plugins>
     </build>
