--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           command: | 
             if ! command -v tar &> /dev/null; then
               echo "Installing tar..."
-              sudo apt-get update && sudo apt-get install -y tar
+              apt-get update && sudo apt-get install -y tar
             else
               echo "tar is already installed."
             fi
