--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,10 @@ jobs:
               echo "tar is already installed."
             fi
       - run: 
+          name: Install Maven
+          command: |
+            apt-get update && apt-get install -y maven
+      - run: 
           name: Verify Code Exists
           command: ls -la
       - run:
