--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring-boot.version>3.1.0</spring-boot.version> <!-- 🔹 Added Spring Boot Version -->
+        <spring-boot.version>3.1.0</spring-boot.version> <!-- Added Spring Boot Version -->
     </properties>
 
     <dependencies>
