--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,23 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <!-- Added Missing Version Number for Maven Plugin -->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
-            </plugin>
-        </plugins>
-    </build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>  <!-- Ensure a recent version -->
+            <configuration>
+                <source>17</source>  <!--  Set Java 17 as the source -->
+                <target>17</target>  <!-- Set Java 17 as the target -->
+            </configuration>
+        </plugin>
+
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>${spring-boot.version}</version>
+        </plugin>
+    </plugins>
+</build>
+
 </project>
