--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,20 +11,15 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install Required Packages (tar & Maven)  # ✅ Fix tar Missing
+          name: Install Required Packages (tar & Maven)
           command: |
-            echo "Checking for tar..."
-            if ! command -v tar &> /dev/null; then
-              echo "Installing tar..."
-              apt-get update && apt-get install -y tar || true
-            else
-              echo "tar is already installed."
-            fi
+            echo "Updating package lists..."
+            apt-get update
+            echo "Installing tar..."
+            apt-get install -y tar
             echo "Installing Maven..."
-            apt-get update && apt-get install -y maven || true
-      - run:
-          name: Verify Installed Dependencies
-          command: |
+            apt-get install -y maven
+            echo "Verifying installations..."
             tar --version
             mvn -version
       - run:
