--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,12 +46,10 @@ jobs:
             echo "Installing tar and gzip..."
             yum install -y tar gzip
             echo "Installing Docker..."
-            yum install -y docker
-            yum install -y amazon-linux-extras
-            amazon-linux-extras enable docker
-            yum clean metadata
-            yum install -y docker
-            service docker start
+            yum install -y yum-utils
+            yum-config-manager --add-repo https://download.docker.com/linux/amazonlinux/docker-ce.repo
+            yum install -y docker-ce docker-ce-cli containerd.io
+            systemctl start docker
             echo "Verifying installations..."
             tar --version
             gzip --version
