--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,8 @@ jobs:
             echo "Installing tar and gzip..."
             yum install -y tar gzip
             echo "Installing Docker..."
-            yum install -y yum-utils
-            yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-            yum install -y docker-ce docker-ce-cli containerd.io
+            yum install -y amazon-linux-extras
+            amazon-linux-extras install -y docker
             systemctl start docker
             echo "Verifying installations..."
             tar --version
