--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,12 +33,18 @@ jobs:
 
   docker-push:
     docker:
-      - image: cimg/aws:2024.01
+      - image: public.ecr.aws/aws-cli/aws-cli:2.15.0  # Official AWS CLI image
     environment:
       AWS_DEFAULT_REGION: us-east-1
     steps:
       - checkout
       - setup_remote_docker
+      - run:
+          name: Install Docker
+          command: |
+            yum update -y
+            yum install -y docker
+            service docker start
       - attach_workspace:
           at: .
       - run:
@@ -63,7 +69,7 @@ jobs:
 
   deploy:
     docker:
-      - image: cimg/aws:2024.01
+      - image: public.ecr.aws/aws-cli/aws-cli:2.15.0  # Official AWS CLI image
     environment:
       AWS_DEFAULT_REGION: us-east-1
     steps:
