--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,9 @@ jobs:
           name: Install Docker
           command: |
             yum update -y
-            yum install -y docker
+            yum install -y yum-utils
+            yum-config-manager --add-repo https://download.docker.com/linux/amazonlinux/docker-ce.repo
+            yum install -y docker-ce docker-ce-cli containerd.io
             service docker start
       - attach_workspace:
           at: .
