--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition hello-world-app --region us-east-1)
             
             # Update the image in task definition
-            NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "026090518315.dkr.ecr.us-east-1.amazonaws.com/hello-world-app:${CIRCLE_SHA1}" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
+            NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "#IMAGE/hello-world-app:${CIRCLE_SHA1}" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
             
             # Register new task definition
             NEW_TASK_DEFINITION_ARN=$(aws ecs register-task-definition --region us-east-1 --cli-input-json "$NEW_TASK_DEFINITION" | jq -r '.taskDefinition.taskDefinitionArn')
